<resources>
    <string name="app_name">无界</string>
    <string name="user_name">User name</string>
    <string name="login">Login</string>
    <string name="permissionsError">Please open the camera permissions or to open the camera permissions in the settings!</string>
    <string name="registersuccess">Register Successful</string>
    <string name="BDS">BDS</string>
    <string name="BTC">BTC</string>
    <string name="button_cancel">Cancel</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem.You need to change camera permissions inside the settings.</string>
    <string name="bds_sure">确定</string>
    <string name="CNY">CNY</string>
    <string name="priceInfo">Sorry, your credit is running low!</string>
    <string name="prompt">ATTENTION</string>
    <string name="exit">Are you sure you want to exit Borderless?</string>
    <string name="confirm">Confirm</string>
    <string name="copy">Press to copy the collection address</string>
    <string name="Balance">Balance:</string>
    <string name="Account">Address:</string>
    <string name="Amount">Amount:</string>
    <string name="change">Fee:</string>
    <string name="qr">Align QR code within the frame to scan</string>
    <string name="copy_ed">Copied successfully!</string>
    <string name="isconfirm">Confirm the tranfer? \nUser name:</string>
    <string name="rollout">Send</string>
    <string name="rollin">Receive</string>
    <string name="languages">Select language</string>
    <string name="language">Languages</string>
    <string name="nousername">User does not exist</string>
    <string name="outsuccess">Success</string>
    <string name="update">Update required</string>
    <string name="loading">Downloading...</string>
    <string name="acceptance">Acceptors</string>
    <string name="turn">Turnover:</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="gmv">GMV</string>
    <string name="Amount1">Amount</string>
    <string name="change1">Service Charge</string>
    <string name="risetime">Completed</string>
    <string name="operation">OPERATION</string>
    <string name="network">Network connection exception</string>
    <string name="refresh">The refresh retry</string>
    <string name="loading1">loading...</string>
    <string name="checked">Please select the transaction type</string>
    <string name="new_account">Create account</string>
    <string name="copy1">Copy</string>
    <string name="bankname">Name of bank</string>
    <string name="banknum">Card number</string>
    <string name="lifemember">  Life Member</string>
    <string name="address">地址：</string>
    <string name="path">Selection path</string>
    <string name="password1">Password：</string>
    <string name="loadpic">保存图片到相册</string>
    <string name="savepic">已经保存至相册</string>
    <string name="nodename">节点名称</string>
    <string name="info1">信息</string>
    <string name="search">Search</string>
    <string name="choicewallet">Please select your wallet</string>
    <string name="nomoredata">没有更多数据了</string>
    <string name="Thankyou">你的评价会让我们做的更好</string>
    <string name="operationHints">Operation hints</string>
    <string name="registerfail">注册失败</string>
    <string name="myKey">My keys</string>
    <string name="bds_note_null_pwd">Password can not be empty</string>
    <string name="bds_note_pwd_not_agree">Password does not match the confirm password</string>
    <string name="bds_switch_wallet">Change wallet</string>
    <string name="bds_sellect_wallet">Select wallet</string>
    <string name="bds_delete">Delete</string>
    <string name="bds_note_wallet_remove">Upon deletion,this wallet and all its contents will be permanently lost.Do you comfirm?</string>
    <string name="bds_confirm">Confirm</string>
    <string name="bds_cancel">Cancel</string>
    <string name="bds_import_wallet">Import wallet</string>
    <string name="bds_import">Import</string>
    <string name="bds_import_file">Import wallet</string>
    <string name="bds_note_ncorrecti_pwd">Incorrect password, please enter again</string>
    <string name="bds_sellect_node">Select node</string>
    <string name="bds_node_sellect">Select node</string>
    <string name="bds_node_name">Node</string>
    <string name="bds_delay">Delay</string>
    <string name="bds_status">Status</string>
    <string name="bds_current_choice">Current</string>
    <string name="bds_select_account">Select account</string>
    <string name="bds_signup">Sign up</string>
    <string name="bds_username">Username</string>
    <string name="bds_referrer">Referrer (Optional)</string>
    <string name="bds_regist_successful">Registration successful</string>
    <string name="bds_acceptance">Acceptors</string>
    <string name="bds_fee_margin">Fee:</string>
    <string name="bds_max_withdrawal">Maximum amount</string>
    <string name="bds_deposit">Deposit</string>
    <string name="bds_sel_deposit">Select deposit currency</string>
    <string name="bds_balance">Balance</string>
    <string name="bds_Deposit_options">Select deposit method</string>
    <string name="bds_Creditcard">Credit card</string>
    <string name="bds_WeChat">WeChat pay</string>
    <string name="bds_Alipay">Alipay</string>
    <string name="bds_GatewayServiceFee">Gateway service fee</string>
    <string name="bds_Submit">Submit</string>
    <string name="bds_Note">Attention</string>
    <string name="bds_Submited">Submitted</string>
    <string name="bds_Withdraw">Withdraw</string>
    <string name="bds_CardName">Name on card</string>
    <string name="bds_BranchName">Bank name</string>
    <string name="bds_CreditNum">Card number</string>
    <string name="bds_Rate">Rate this transaction</string>
    <string name="bds_NOTEFillName">Enter your name.</string>
    <string name="bds_NOTEFillBanch">Enter the branch name</string>
    <string name="bds_NOTEFillCard">Enter your credit card number.</string>
    <string name="bds_NOTEFillAlipay">Enter Alipay account.</string>
    <string name="bds_NOTEFillWeChat">Enter your WeChat account.</string>
    <string name="bds_DepositHistory">Deposit history</string>
    <string name="bds_Time">Time &amp; Date</string>
    <string name="bds_Quantity">Amount</string>
    <string name="bds_Currency">Currency</string>
    <string name="bds_Membership">Canceled</string>
    <string name="bds_PendingPayment">Pending payment</string>
    <string name="bds_PendingPaymentFrom">Pending payment from member</string>
    <string name="bds_MarkPaymentSent">Mark payment as sent</string>
    <string name="bds_OrderNumber">Order number</string>
    <string name="bds_OrderUniqueID">Order unique ID</string>
    <string name="bds_OrderStatus">Order status</string>
    <string name="bds_PaymentAmount">Payment amount</string>
    <string name="bds_ConfirmedPayment">Member has confirmed payment</string>
    <string name="bds_Transfer">Transfer</string>
    <string name="bds_Complete">Complete</string>
    <string name="bds_WaitingTransfer">Waiting for gateway to transfer</string>
    <string name="bds_QuestionAsk">Please tick the checkbox and submit once payment has been made.</string>
    <string name="bds_QuestionConf">confirm the deposit was sent to the acceptor.</string>
    <string name="bds_WithdrawalHistory">Withdrawal history</string>
    <string name="bds_QuestionAsk2">Please confirm if the payment has been received</string>
    <string name="bds_ConfirmReceived2">I confirm payment from the other party has been received</string>
    <string name="bds_my_assets">Available balance</string>
    <string name="bds_total_assets">Total Assets</string>
    <string name="bds_current_block">Current block</string>
    <string name="bds_previous_block">Previous block</string>
    <string name="bds_active_witness">Active witness</string>
    <string name="bds_generated_at">Generated at</string>
    <string name="bds_active_board_members">Active board members</string>
    <string name="bds_block_id">Block ID</string>
    <string name="bds_witness">Witness</string>
    <string name="bds_number_of_transactions">Number of transactions</string>
    <string name="bds_transactions">My transactions</string>
    <string name="bds_bts_usd">BDS:bdsCNY</string>
    <string name="bds_highest_buy">Highest buy</string>
    <string name="bds_lowest_sell">Lowest sell</string>
    <string name="bds_volume">Volume</string>
    <string name="bds_turnover">Total</string>
    <string name="bds_buy">Buy</string>
    <string name="bds_sell">Sell</string>
    <string name="bds_entrust_2">Positions</string>
    <string name="bds_history_2">My trades</string>
    <string name="bds_type">Type</string>
    <string name="bds_price">Price</string>
    <string name="bds_quantity">Amount</string>
    <string name="bds_fee">Fee</string>
    <string name="bds_nodata">No data</string>
    <string name="bds_note_quantity">Quantity can not be 0</string>
    <string name="bds_note_insufficient_funds">Insufficient funds</string>
    <string name="bds_note_insufficient_fee">Insufficient fee</string>
    <string name="bds_my">My Account</string>
    <string name="bds_copied_to_clipboard">Copied to clipboard</string>
    <string name="bds_no_transfer_money_to_yourself">Can’t transfer money to yourself</string>
    <string name="bds_accoun_is_empty">Account name is empty</string>
    <string name="bds_enter_amount">Please enter amount to transfer</string>
    <string name="bds_account_name">Account number</string>
    <string name="bds_upgrade">Upgrade membership</string>
    <string name="bds_lifemember">Lifetime membership</string>
    <string name="bds_can_create_account">Become a lifetime member and refer your friends to Borderless!</string>
    <string name="bds_account_balance">Account balance</string>
    <string name="bds_confirm_upgrade">Confirm upgrade</string>
    <string name="bds_upgrade_successful">Upgrade successful</string>
    <string name="bds_already_lifemember">Already a Lifetime member</string>
    <string name="bds_new_version">Check for updates</string>
    <string name="bds_already_new_version">Already up to date</string>
    <string name="bds_backup">Backup</string>
    <string name="bds_backup_info">Upon confirmation a \'.bin\' backup file will be generated. This file will contain yours private keys through which you can restore your wallet and switch between different devices.</string>
    <string name="bds_submit">Submit</string>
    <string name="bds_invalid_password">Invalid password</string>
    <string name="bds_transaction_history">Transaction history</string>
    <string name="bds_public_key">API key</string>
    <string name="bds_private_key">Private key</string>
    <string name="bds_enter_wallet_password">Enter wallet password</string>
    <string name="bds_incorrect_wallet_password">Incorrect wallet password</string>
    <string name="bds_copy">Copy</string>
    <string name="bds_create_account">Create account</string>
    <string name="bds_PasswordLenghCheck">password need to be no less than 6 digits</string>
    <string name="bds_Username">Username:</string>
    <string name="bds_AccountAlreadyExists">Account already exists</string>
    <string name="bds_address">Address：</string>
    <string name="bds_prikey">Private key:</string>
    <string name="bds_pub_key">Public key:</string>
    <string name="bds_backup_note">Once a backup is created, you can find it in the root directory: \'bds/borderless/backup\'</string>
    <string name="bds_export">Backup &amp; export</string>
    <string name="bds_confirm_pwd1">Confirm password:</string>
    <string name="bds_vip_node">Able to create account and recommend others</string>
    <string name="bds_membsership_fee">Upgrade fee</string>
    <string name="bds_account_balance2">Balance</string>
    <string name="bds_baocun_jietu">保存截图</string>
</resources>