<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/d5"
    android:paddingLeft="@dimen/d10"
    android:paddingRight="@dimen/d10"
    android:paddingTop="@dimen/d5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="@dimen/d0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/type"
            android:textColor="@color/common_color_blank"
            android:textSize="@dimen/s12" />

        <TextView
            android:id="@+id/tv_btc"
            android:layout_width="@dimen/d0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/price"
            android:textColor="@color/common_color_blank"
            android:textSize="@dimen/s12" />

        <TextView
            android:id="@+id/tv_bds"
            android:layout_width="@dimen/d0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Amount1"
            android:textColor="@color/common_color_blank"
            android:textSize="@dimen/s12" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="@dimen/d0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingRight="@dimen/d6"
            android:text="@string/gmv"
            android:textColor="@color/common_color_blank"
            android:textSize="@dimen/s12" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="@dimen/d0"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_weight="1"
            android:background="@drawable/btn_rechange_bg_rect"
            android:gravity="center"
            android:padding="@dimen/d3"
            android:text="@string/button_cancel"
            android:textColor="@color/rechange_tab_selected"
            android:textSize="@dimen/s12" />
    </LinearLayout>

</LinearLayout>
