<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/d20" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginLeft="@dimen/d10"
            style="@style/textviewtitle"
            android:text="@string/bds_block_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="1"
            android:ellipsize="end"/>

        <TextView
            android:layout_marginLeft="@dimen/d10"
            style="@style/textviewtitle"
            android:text="@string/bds_generated_at"
            android:layout_gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:lines="1"
            android:ellipsize="end"
            android:gravity="center"
            />

        <TextView
            style="@style/textviewtitle"
            android:text="@string/bds_witness"
            android:layout_gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="1"
            android:ellipsize="end"
            android:gravity="center"/>

        <TextView
            android:layout_marginRight="@dimen/d10"
            android:layout_gravity="center_horizontal"
            style="@style/textviewtitle"
            android:text="@string/bds_number_of_transactions"
            android:gravity="right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="1"
            android:ellipsize="end"/>
    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/d20" />
</LinearLayout>