<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/cashin_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        style="@style/my_actionbar_styles"
        >

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/d40"
            android:layout_height="@dimen/d40"
            android:padding="10dp"
            android:layout_marginTop="@dimen/d5"
            android:src="@mipmap/common_back" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingTop="@dimen/d20"
            style="@style/text_title_textsize"
            android:text="@string/bds_backup"
            />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/common_separator_v2"
        />




    <ImageView
        android:layout_width="@dimen/d80"
        android:layout_height="@dimen/d80"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/icon"
        android:layout_marginTop="@dimen/d30"
        />


    <TextView
        android:id="@+id/tv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_bg"
        android:padding="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/bds_backup_info"
        style="@style/text_black_textsize13"
        android:lineSpacingExtra="@dimen/d5"
        android:layout_marginTop="40dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_bg"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:text="@string/bds_address"
            android:textColor="@color/common_color_blank"
            />
        <TextView
            android:id="@+id/tv_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/path"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/common_white"
            android:background="@drawable/btn_sendout"
            android:layout_marginRight="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rectangle_bg"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:text="@string/bds_confirm_pwd1"
            style="@style/text_black_textsize13"
            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@color/common_bg_gray"
            style="@style/text_black_textsize13"
            android:inputType="textPassword"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:textSize="@dimen/s12"
        style="@style/text_black_textsize13"
        android:text="@string/bds_backup_note"/>

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="230dp"
        android:layout_height="42.3dp"
        android:background="@drawable/bg_button_shape_radiues"
        android:padding="5dp"
        android:layout_gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/bds_export"
        android:textColor="@color/common_white"
        android:gravity="center"
        android:layout_marginTop="40dp"
        />



</LinearLayout>